# sdl3-arkanoid

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.txt  vcpkg.json
doc/: architecture.md  development.md  game_loop.md  release_gate.md
include/arkanoid/core/: game.hpp  game_geometry.hpp  game_phase.hpp
include/arkanoid/sim/: game_state.hpp
src/: main.cpp
src/app/: application.cpp  application.hpp  frame_timing.cpp  frame_timing.hpp  input.cpp  input.hpp  run_mode.cpp  run_mode.hpp
src/core/: game.cpp
src/render/: render_frame.cpp  render_frame.hpp
tests/: CMakeLists.txt  game_test_helpers.hpp  test_bricks_and_board_clear.cpp  test_countdown_and_serve.cpp  test_dt_validation.cpp  test_life_loss_and_reset.cpp  test_state_machine.cpp  test_wall_and_paddle_collision.cpp
tools/windows/: analyze.ps1  build.ps1  common.ps1  dev_build.ps1  format.ps1  release.ps1  test.ps1
